# Lunaris

./: LICENSE  README.md  index.html  package-lock.json  package.json  steam_ach.xml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddGameModal.tsx  BackgroundLayer.tsx  EditGameModal.tsx  EmptyState.tsx  GameDetails.tsx  GameIcon.tsx  GameIconCarousel.tsx  TopBar.tsx
src/hooks/: useGamepad.ts  useParallax.ts
src/stores/: gameStore.ts
src/utils/: fileUtils.ts  imageCache.ts
